# LayoutDifferencesSimulation

./: .gitignore  CMakeLists.txt  CMakeSettings.json
HeaderOnlyLib/V1/: base.h
HeaderOnlyLib/V2/: base.h
Simulator/Sources/: CMakeLists.txt  main.cpp
StaticLib/: CMakeLists.txt
StaticLib/Includes/: ExampleLib.h
StaticLib/Includes/example_lib/: DoSomething.h
StaticLib/Sources/: CMakeLists.txt  DoSomething.cpp
